payment just created

--- a/payment.html
+++ b/payment.html
@@ -36,7 +36,7 @@
        <hr id="hr">
        <div id="payment-info"> <span id="count4">4</span>PAYMENT INFORMATION</div>
 
-    <div id="footer"><img id="footer-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRs53pRUoO4k9gmC3PFzY37WM3y0mcDQGa-2g&usqp=CAU" alt=""></div>
+    <div id="footer"><img id="footer-img" src="./image/footer_image.png" alt=""></div>
 
 </body>
 </html>
@@ -44,3 +44,6 @@
 <script src="payment.js">
 
 </script>
+
+
+
